<resources>
    <string name="app_name">MaterialDesignNavDrawer</string>

    <!-- NavigationDrawer-->
    <string name="home_remotes">Remotes</string>
    <string name="home_servers">Servers</string>
    <string name="home_preferences">Preferences</string>
    <string name="home_editor">Editor</string>
    <string name="home_widgets">Widgets</string>
    <string name="home_quick_actions">Quick Actions</string>
    <string name="home_help">Help</string>
    <string name="home_exit">Exit</string>
    <string name="home_upgrade">Upgrade</string>
    <string name="home_status">Status</string>
    <string name="menu_left_customize">Customize</string>
    <string name="menu_left_servers">Saved Servers</string>
    <string name="menu_left_servers_none">No servers added</string>
    <string name="menu_left_other">Other</string>
    <string name="menu_left_share">Tell Friends</string>
    <string name="menu_left_rate">Rate App</string>
    <string name="drawer_open">open</string>
    <string name="drawer_close">close</string>
    <string name="title_activity_main">MainActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
